# lesson_1

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.txt
backlog/: sprint1.md
backlogs/: sprint1.md
logs/: usage.md
notebooks/: queries.ipynb
prompts/: best.txt
results/: answers.json
src/: azure_openai_test.py
src/invest_task/: gpt_scrum.py
src/langchain_rag/: docs_to_storage.py  function_app.py  host.json  main.py  rag_client.py  requirements.txt  text.ipynb
src/langchain_rag/tests/: test_rag.py
src/quiz_game/: quiz_game.py  quiz_game_enhanced.py
src/rag/: main.py
src/task_1/: main.bicep
