[tool.poetry]
name = "accenture-learning"
version = "0.1.0"
description = "Learning repository for Accenture training"
authors = ["Aleksei <leshkachovzhik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.12.0"
python-dotenv = "^1.0.0"
isort = "^5.13.0"
black = "^24.1.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
